mod http -> https

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
 		<title>Company Name</title>
-		<link href="http://cdnjs.cloudflare.com/ajax/libs/uikit/1.2.0/css/uikit.gradient.min.css" rel="stylesheet" type="text/css">
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/uikit/1.2.0/css/uikit.gradient.min.css" rel="stylesheet" type="text/css">
 		<link href="style.css" rel="stylesheet" type="text/css">
 	</head>
 
@@ -15,7 +15,7 @@
 			<div class="uk-grid">
 				<div id="navigation" class="uk-width-medium-1-4">
 					<h1 class="nav-header">Company Name</h1>
-					<a class="nav-header" href="http://website.com">website.com</a>
+					<a class="nav-header" href="https://website.com">website.com</a>
 					<ul class="uk-nav uk-nav-side">					<li><a href="#factsheet">Factsheet</a></li>
 						<li><a href="#description">Description</a></li>
 						<li><a href="#history">History</a></li>
@@ -40,14 +40,14 @@
 							</p>
 							<p>
 								<strong>Website:</strong><br/>
-								<a href="http://website.com">website.com</a>
+								<a href="https://website.com">website.com</a>
 							</p>
 							<p>
 								<strong>Press / Business contact:</strong><br/>
 								<a href="mailto:press-contact@company.com">press-contact@company.com</a>
 							</p>        
 							<p>
-								<strong>Social:</strong><br/><a href="http://twitter.com/MyCompanyName">twitter.com/MyCompanyName</a><br/><a href="http://facebook.com/MyCompanyName">facebook.com/MyCompanyName</a><br/><a href="http://callto:MySkypeName">Skype</a><br/>							</p>
+								<strong>Social:</strong><br/><a href="https://twitter.com/MyCompanyName">twitter.com/MyCompanyName</a><br/><a href="https://facebook.com/MyCompanyName">facebook.com/MyCompanyName</a><br/><a href="https://callto:MySkypeName">Skype</a><br/>							</p>
 							<p>
 							<strong>Releases:</strong><br /><a href="template.html">Template</a><br />							</p>
 							<p><strong>Address:</strong><br/>Address Line 1<br/>Address Line 2<br/>Address Line 3<br/>							</p> 
@@ -70,10 +70,10 @@
 
 					<hr>
 
-					<h2 id="trailers">Videos</h2><p><strong>This video is nice</strong>&nbsp;<a href="http://www.youtube.com/watch?v=7jQbITg0MSk">YouTube</a><div class="uk-responsive-width iframe-container">
-		<iframe src="http://www.youtube.com/embed/7jQbITg0MSk" frameborder="0" allowfullscreen></iframe>
-</div></p><p><strong>This one too</strong>&nbsp;<a href="http://www.youtube.com/watch?v=0CevOaYrYDA">YouTube</a>, <a href="http://www.vimeo.com/12536488">Vimeo</a><div class="uk-responsive-width iframe-container">
-		<iframe src="http://www.youtube.com/embed/0CevOaYrYDA" frameborder="0" allowfullscreen></iframe>
+					<h2 id="trailers">Videos</h2><p><strong>This video is nice</strong>&nbsp;<a href="https://www.youtube.com/watch?v=7jQbITg0MSk">YouTube</a><div class="uk-responsive-width iframe-container">
+		<iframe src="https://www.youtube.com/embed/7jQbITg0MSk" frameborder="0" allowfullscreen></iframe>
+</div></p><p><strong>This one too</strong>&nbsp;<a href="https://www.youtube.com/watch?v=0CevOaYrYDA">YouTube</a>, <a href="https://www.vimeo.com/12536488">Vimeo</a><div class="uk-responsive-width iframe-container">
+		<iframe src="https://www.youtube.com/embed/0CevOaYrYDA" frameborder="0" allowfullscreen></iframe>
 </div></p>					<hr>
 
 					<h2 id="images">Images</h2><a href="images/images.zip"><div class="uk-alert">download all screenshots &amp; photos as .zip (122KB)</div></a><div class="uk-grid images"><div class="uk-width-medium-1-2"><a href="images/screenshot1.png"><img src="images/screenshot1.png" alt="screenshot1.png" /></a></div></div>					<p class="images-text">There are far more images available for Company Name, but these are the ones we felt would be most useful to you. If you have specific requests, please do <a href="#contact">contact us</a>!</p>
