mod http -> https

--- a/template.html
+++ b/template.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
 		<title>Company Name</title>
-		<link href="http://cdnjs.cloudflare.com/ajax/libs/uikit/1.2.0/css/uikit.gradient.min.css" rel="stylesheet" type="text/css">
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/uikit/1.2.0/css/uikit.gradient.min.css" rel="stylesheet" type="text/css">
 		<link href="style.css" rel="stylesheet" type="text/css">
 	</head>
 
@@ -42,10 +42,10 @@
 							</p>
 
 							<p>
-								<strong>Platforms:</strong><br /><a href="http://gamesite.com">PC / Mac</a><br/><a href="http://steampowered.com">Steam</a><br/><a href="http://itunes.com">Apple App Store</a><br/>							</p>
+								<strong>Platforms:</strong><br /><a href="https://gamesite.com">PC / Mac</a><br/><a href="https://steampowered.com">Steam</a><br/><a href="https://itunes.com">Apple App Store</a><br/>							</p>
 							<p>
 								<strong>Website:</strong><br/>
-								<a href="http://gamesite.com">gamesite.com</a>
+								<a href="https://gamesite.com">gamesite.com</a>
 							</p>
 							<p>
 								<strong>Regular Price:</strong><br/><table><tr><td>USD</td><td>$1.99</td></tr><tr><td>EUR</td><td>€1.59</td></tr><tr><td>CAD</td><td>$1.99</td></tr><tr><td>GBP</td><td>£1.29</td></tr></table>							</p>
@@ -64,10 +64,10 @@
 
 					<hr>
 
-					<h2 id="trailers">Videos</h2><p><strong>Trailer</strong>&nbsp;<a href="http://www.youtube.com/watch?v=7jQbITg0MSk">YouTube</a>, <a href="http://www.vimeo.com/23571681">Vimeo</a><div class="uk-responsive-width iframe-container">
-		<iframe src="http://www.youtube.com/embed/7jQbITg0MSk" frameborder="0" allowfullscreen></iframe>
-</div></p><p><strong>Gameplay Video</strong>&nbsp;<a href="http://www.youtube.com/watch?v=7jQbITg0MSk">YouTube</a>, <a href="http://www.vimeo.com/23571681">Vimeo</a><div class="uk-responsive-width iframe-container">
-		<iframe src="http://www.youtube.com/embed/7jQbITg0MSk" frameborder="0" allowfullscreen></iframe>
+					<h2 id="trailers">Videos</h2><p><strong>Trailer</strong>&nbsp;<a href="https://www.youtube.com/watch?v=7jQbITg0MSk">YouTube</a>, <a href="https://www.vimeo.com/23571681">Vimeo</a><div class="uk-responsive-width iframe-container">
+		<iframe src="https://www.youtube.com/embed/7jQbITg0MSk" frameborder="0" allowfullscreen></iframe>
+</div></p><p><strong>Gameplay Video</strong>&nbsp;<a href="https://www.youtube.com/watch?v=7jQbITg0MSk">YouTube</a>, <a href="https://www.vimeo.com/23571681">Vimeo</a><div class="uk-responsive-width iframe-container">
+		<iframe src="https://www.youtube.com/embed/7jQbITg0MSk" frameborder="0" allowfullscreen></iframe>
 </div></p>					<hr>
 
 					<h2 id="images">Images</h2><a href="template/images/images.zip"><div class="uk-alert">download all screenshots &amp; photos as .zip (31KB)</div></a><div class="uk-grid images"><div class="uk-width-medium-1-2"><a href="template/images/screenshot1.png"><img src="template/images/screenshot1.png" alt="screenshot1.png" /></a></div></div>					<hr>
@@ -76,15 +76,15 @@
 			
 						<h2>Selected Articles</h2>
 						<ul><li>"This is a rather insignificant quote by a highly important person." <br/>
-	<cite>- Person Name, <a href="http://">Website</a></cite></li><li>"An extremely positive quote from a rather insignificant person. Also great." <br/>
-	<cite>- Some Guy, <a href="http://">This Page Is Visited By 12 Visitors A Month</a></cite></li><li>"I pretend to love this game even though I do not actually understand it." <br/>
-	<cite>- Pretentious Bastard, <a href="http://">Artsy Page</a></cite></li><li>"HOLY SHIT SO AMAZING" <br/>
-	<cite>- Caps Guy, <a href="http://">Angry Review</a></cite></li></ul><hr><h2 id="preview">Request Press Copy</h2><p>We are afraid this developer has not upgraded their presskit() to use distribute(). For security purposes, this form has been disabled.</p><hr>					<h2 id="links">Additional Links</h2><p>
+	<cite>- Person Name, <a href="https://">Website</a></cite></li><li>"An extremely positive quote from a rather insignificant person. Also great." <br/>
+	<cite>- Some Guy, <a href="https://">This Page Is Visited By 12 Visitors A Month</a></cite></li><li>"I pretend to love this game even though I do not actually understand it." <br/>
+	<cite>- Pretentious Bastard, <a href="https://">Artsy Page</a></cite></li><li>"HOLY SHIT SO AMAZING" <br/>
+	<cite>- Caps Guy, <a href="https://">Angry Review</a></cite></li></ul><hr><h2 id="preview">Request Press Copy</h2><p>We are afraid this developer has not upgraded their presskit() to use distribute(). For security purposes, this form has been disabled.</p><hr>					<h2 id="links">Additional Links</h2><p>
 	<strong>Original Soundtrack</strong><br/>
-	Available for free from <a href="http://somemusicsite.com/thislink" alt="somemusicsite.com/thislink">somemusicsite.com</a>.
+	Available for free from <a href="https://somemusicsite.com/thislink" alt="somemusicsite.com/thislink">somemusicsite.com</a>.
 </p><p>
 	<strong>Release Blog Post</strong><br/>
-	The blog-post through which this game was released is available at <a href="http://vlambeer.com/bloglink" alt="vlambeer.com/bloglink">vlambeer.com</a>.
+	The blog-post through which this game was released is available at <a href="https://vlambeer.com/bloglink" alt="vlambeer.com/bloglink">vlambeer.com</a>.
 </p>					<hr>
 
 					<h2 id="about">About Company Name</h2>
@@ -104,21 +104,21 @@
 
 					<div class="uk-grid">
 						<div class="uk-width-medium-1-2">
-							<h2 id="credits">Game Name Credits</h2><p><strong>Rami Ismail</strong><br/>Business & Development, Vlambeer</p><p><strong>Jan Willem Nijman</strong><br/>Game Designer, Vlambeer</p><p><strong>John Doe</strong><br/>Artist, Freelancer</p><p><strong>Oliver Twist</strong><br/><a href="http://olivertwist.com">Artist, Freelancer</a></p><p><strong>Jane Doette</strong><br/><a href="http://olivertwist.com">Music, Freelancer</a></p>						</div>
+							<h2 id="credits">Game Name Credits</h2><p><strong>Rami Ismail</strong><br/>Business & Development, Vlambeer</p><p><strong>Jan Willem Nijman</strong><br/>Game Designer, Vlambeer</p><p><strong>John Doe</strong><br/>Artist, Freelancer</p><p><strong>Oliver Twist</strong><br/><a href="https://olivertwist.com">Artist, Freelancer</a></p><p><strong>Jane Doette</strong><br/><a href="https://olivertwist.com">Music, Freelancer</a></p>						</div>
 						<div class="uk-width-medium-1-2">
-							<h2 id="contact">Contact</h2><p><strong>Inquiries</strong><br/><a href="mailto:rami@vlambeer.com">rami@vlambeer.com</a></p><p><strong>Twitter</strong><br/><a href="http://twitter.com/MyCompanyName">twitter.com/MyCompanyName</a></p><p><strong>Facebook</strong><br/><a href="http://facebook.com/MyCompanyName">facebook.com/MyCompanyName</a></p><p><strong>Web</strong><br/><a href="http://MyCompanyWebsite.com">MyCompanyWebsite.com</a></p>						</div>
+							<h2 id="contact">Contact</h2><p><strong>Inquiries</strong><br/><a href="mailto:rami@vlambeer.com">rami@vlambeer.com</a></p><p><strong>Twitter</strong><br/><a href="https://twitter.com/MyCompanyName">twitter.com/MyCompanyName</a></p><p><strong>Facebook</strong><br/><a href="https://facebook.com/MyCompanyName">facebook.com/MyCompanyName</a></p><p><strong>Web</strong><br/><a href="https://MyCompanyWebsite.com">MyCompanyWebsite.com</a></p>						</div>
 					</div>
 
 					<hr>
 
-					<p><a href="http://dopresskit.com/">presskit()</a> by Rami Ismail (<a href="http://www.vlambeer.com/">Vlambeer</a>) - also thanks to <a href="sheet.php?p=credits">these fine folks</a></p>
+					<p><a href="https://dopresskit.com/">presskit()</a> by Rami Ismail (<a href="https://www.vlambeer.com/">Vlambeer</a>) - also thanks to <a href="sheet.php?p=credits">these fine folks</a></p>
 				</div>
 			</div>
 		</div>
 
-		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.0.4/jquery.imagesloaded.js"></script>		
-		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/masonry/3.1.2/masonry.pkgd.min.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.0.4/jquery.imagesloaded.js"></script>		
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.1.2/masonry.pkgd.min.js"></script>
 		<script type="text/javascript">
 			$( document ).ready(function() {
 				var container = $('.images');
