--- a/index.html
+++ b/index.html
@@ -82,26 +82,26 @@
 
 					<h2 id="logo">Logo &amp; Icon</h2><a href="images/logo.zip"><div class="uk-alert">download logo files as .zip (57KB)</div></a><div class="uk-grid images"><div class="uk-width-medium-1-2"><a href="images/logo.png"><img src="images/logo.png" alt="logo" /></a></div><div class="uk-width-medium-1-2"><a href="images/icon.png"><img src="images/icon.png" alt="logo" /></a></div></div>					<hr><h2 id="awards">Awards &amp; Recognition</h2>
 					<ul><li>"Winner in this highly relevant contest." - <cite>Award Location, 20 October, 1989</cite></li><li>"Nomination for this prestigious award." - <cite>Award Ceremony, 4 December, 1991</cite></li><li>"Winner in this highly relevant contest." - <cite>Award Location, 20 October, 1989</cite></li><li>"Nomination for this prestigious award." - <cite>Award Ceremony, 4 December, 1991</cite></li></ul><hr>					<h2 id="quotes">Selected Articles</h2>
-						<ul><li>"This is a rather insignificant quote by a highly important person."<br/><cite>- Person Name, <a href="http://website.com/">Website</a></cite></li></li><li>"An extremely positive quote from a rather insignificant person. Also great."<br/><cite>- Some Guy, <a href="http://geocities.blog.com/">This Page Is Visited By 12 Visitors A Month</a></cite></li></li><li>"I pretend to love this game even though I do not actually understand it."<br/><cite>- Pretentious Bastard, <a href="http://art.tumblr.com/">Artsy Page</a></cite></li></li><li>"HOLY SHIT SO AMAZING"<br/><cite>- Caps Guy, <a href="http://thispage.net/angrytube/">Angry Review</a></cite></li></li></ul><hr><h2 id="links">Additional Links</h2><p>
+						<ul><li>"This is a rather insignificant quote by a highly important person."<br/><cite>- Person Name, <a href="https://website.com/">Website</a></cite></li></li><li>"An extremely positive quote from a rather insignificant person. Also great."<br/><cite>- Some Guy, <a href="https://geocities.blog.com/">This Page Is Visited By 12 Visitors A Month</a></cite></li></li><li>"I pretend to love this game even though I do not actually understand it."<br/><cite>- Pretentious Bastard, <a href="https://art.tumblr.com/">Artsy Page</a></cite></li></li><li>"HOLY SHIT SO AMAZING"<br/><cite>- Caps Guy, <a href="https://thispage.net/angrytube/">Angry Review</a></cite></li></li></ul><hr><h2 id="links">Additional Links</h2><p>
 		<strong>Company Link #1</strong><br/>
-		This link is a link that might be useful. You can check it out at <a href="http://somemusicsite.com/thislink" alt="somemusicsite.com/thislink">somemusicsite.com</a>.
+		This link is a link that might be useful. You can check it out at <a href="https://somemusicsite.com/thislink" alt="somemusicsite.com/thislink">somemusicsite.com</a>.
 	</p><hr>					<div class="uk-grid">
 						<div class="uk-width-medium-1-2">
-							<h2 id="credits">Team &amp; Repeating Collaborator</h2><p><strong>John Doe</strong><br/>Artist, Freelancer</p><p><strong>Oliver Twist</strong><br/><a href="http://olivertwist.com/">Artist, Freelancer</a></p><p><strong>Jane Doette</strong><br/><a href="http://olivertwist.com/">Music, Freelancer</a></p>						</div>
+							<h2 id="credits">Team &amp; Repeating Collaborator</h2><p><strong>John Doe</strong><br/>Artist, Freelancer</p><p><strong>Oliver Twist</strong><br/><a href="https://olivertwist.com/">Artist, Freelancer</a></p><p><strong>Jane Doette</strong><br/><a href="https://olivertwist.com/">Music, Freelancer</a></p>						</div>
 						<div class="uk-width-medium-1-2">
-							<h2 id="contact">Contact</h2><p><strong>Inquiries</strong><br/><a href="mailto:rami@vlambeer.com">rami@vlambeer.com</a></p><p><strong>Twitter</strong><br/><a href="http://twitter.com/MyCompanyName">twitter.com/MyCompanyName</a></p><p><strong>Facebook</strong><br/><a href="http://facebook.com/MyCompanyName">facebook.com/MyCompanyName</a></p><p><strong>Web</strong><br/><a href="http://MyCompanyWebsite.com">MyCompanyWebsite.com</a></p>						</div>
+							<h2 id="contact">Contact</h2><p><strong>Inquiries</strong><br/><a href="mailto:rami@vlambeer.com">rami@vlambeer.com</a></p><p><strong>Twitter</strong><br/><a href="https://twitter.com/MyCompanyName">twitter.com/MyCompanyName</a></p><p><strong>Facebook</strong><br/><a href="https://facebook.com/MyCompanyName">facebook.com/MyCompanyName</a></p><p><strong>Web</strong><br/><a href="https://MyCompanyWebsite.com">MyCompanyWebsite.com</a></p>						</div>
 					</div>
 
 					<hr>
 
-					<p><a href="http://dopresskit.com/">presskit()</a> by Rami Ismail (<a href="http://www.vlambeer.com/">Vlambeer</a>) - also thanks to <a href="credits.html">these fine folks</a></p>
+					<p><a href="https://dopresskit.com/">presskit()</a> by Rami Ismail (<a href="https://www.vlambeer.com/">Vlambeer</a>) - also thanks to <a href="credits.html">these fine folks</a></p>
 				</div>
 			</div>
 		</div>
 
-		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.0.4/jquery.imagesloaded.js"></script>		
-		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/masonry/3.1.2/masonry.pkgd.min.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.0.4/jquery.imagesloaded.js"></script>		
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.1.2/masonry.pkgd.min.js"></script>
 		<script type="text/javascript">
 			$( document ).ready(function() {
 				var container = $('.images');
